--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,20 @@
             "email": "frantisek.troster@atlantic18.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
         "coral/core-bundle": "*@dev",
-        "symfony/symfony": "~2.4",
         "symfony/framework-bundle": "~2.4",
         "symfony/finder": "~2.4",
+        "symfony/yaml": "~2.4",
+        "symfony/browser-kit": "~2.4",
+        "symfony/security-bundle": "~2.4",
+        "symfony/monolog-bundle": "~2.4",
         "sensio/framework-extra-bundle": "*",
         "doctrine/orm": "*",
         "doctrine/doctrine-bundle": "*",
-        "gedmo/doctrine-extensions":   "dev-master"
-    },
-    "require-dev": {
-        "liip/functional-test-bundle": "dev-master",
-        "symfony-cmf/testing": "*"
+        "doctrine/doctrine-fixtures-bundle": "*",
+        "gedmo/doctrine-extensions": "dev-master"
     },
     "autoload": {
         "psr-0": { "Coral\\ContentBundle": "" }
