Multiple email travis notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ script:
   - phpunit --coverage-text
 
 notifications:
-  email: developers@atlantic18.com
+  email: 
+    - developers@atlantic18.com
+    - frantisek.troster@gmail.com
