--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "coral/core-bundle": "*@dev",
         "symfony/framework-bundle": "~2.4",
         "symfony/finder": "~2.4",
+        "symfony/validator": "~2.4",
         "symfony/yaml": "~2.4",
         "symfony/browser-kit": "~2.4",
         "symfony/security-bundle": "~2.4",
