--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "coral/core-bundle": "*@dev",
+        "coral/core-bundle": "0.1.0",
         "symfony/framework-bundle": "~2.4",
         "symfony/finder": "~2.4",
         "symfony/validator": "~2.4",
@@ -30,10 +30,5 @@
     "autoload": {
         "psr-0": { "Coral\\ContentBundle": "" }
     },
-    "target-dir": "Coral/ContentBundle",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1-dev"
-        }
-    }
+    "target-dir": "Coral/ContentBundle"
 }
